--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,15 @@
 .header-container {
   width: 100%;
-  height: 280px;
+  height: 25rem;
   background-image: url("../../../assets/images/pattern-bg.png");
   background-size: cover;
+}
+
+h1 {
+  font-size: 2.3rem;
+  width: 100%;
+  text-align: center;
+  color: white;
+  margin: 0;
+  padding-top: 2rem;
 }
