--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+
+$darkGray: #3F3F3F;
+
 body {
+  font-family: 'Rubik';
   margin: 0;
   padding: 0;
 }
