--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
 $darkGray: #3F3F3F;
+$gray: #9E9E9E;
+$lightGray: #A7A7A7;
 
 body {
   font-family: 'Rubik';
