--- a/src/app/components/address-details/address-details.component.scss
+++ b/src/app/components/address-details/address-details.component.scss
@@ -6,16 +6,25 @@
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
   margin: 0 auto;
-  padding: 1.5rem 2rem;
+  padding: 3rem;
 }
 
 .flex-container {
   display: flex;
   justify-content: space-around;
+
+  @media (max-width: 500px) {
+    flex-direction: column;
+    text-align: center;
+  }
 }
 
 .vertical-line {
   border-left: 1px solid $lightGray;
+}
+
+.details-container {
+  padding: 0 0.5rem;
 }
 
 h4 {
@@ -27,4 +36,6 @@ h4 {
 
 p {
   font-size: 1.3rem;
+  word-break: break-all;
+  margin: 0.7rem 0 1.1rem 0;
 }
