--- a/src/app/components/address-details/address-details.component.scss
+++ b/src/app/components/address-details/address-details.component.scss
@@ -7,13 +7,17 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
   margin: 0 auto;
   padding: 3rem;
+
+  @media (max-width: 750px) {
+    width: 70%;
+  }
 }
 
 .flex-container {
   display: flex;
   justify-content: space-around;
 
-  @media (max-width: 500px) {
+  @media (max-width: 750px) {
     flex-direction: column;
     text-align: center;
   }
@@ -24,7 +28,7 @@
 }
 
 .details-container {
-  padding: 0 0.5rem;
+  padding: 0.5rem;
 }
 
 h4 {
