--- a/src/app/components/search-input/search-input.component.scss
+++ b/src/app/components/search-input/search-input.component.scss
@@ -18,6 +18,10 @@ input {
   -moz-border-radius: 14px 0 0 14px;
   -ms-border-radius: 14px 0 0 14px;
   -o-border-radius: 14px 0 0 14px;
+
+  @media (max-width: 750px) {
+    width: 65%;
+  }
 }
 
 input:focus {
