--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,14 +1,7 @@
-@import "~leaflet/dist/leaflet.css";
-
-.map-container {
+:host {
   height: 100%;
 }
 
-.map-frame {
-  border: 2px solid black;
-  height: 100%;
-}
-
-#map {
+.map {
   height: 100%;
 }
