--- a/src/app/components/address-details/address-details.component.scss
+++ b/src/app/components/address-details/address-details.component.scss
@@ -1,7 +1,8 @@
 @import "../../../styles.scss";
 
 .card {
-  width: 85%;
+  width: 80%;
+  max-width: 1150px;
   background: white;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
@@ -9,7 +10,7 @@
   padding: 2rem;
 
   @media (max-width: 750px) {
-    width: 70%;
+    width: 75%;
   }
 }
 
@@ -29,6 +30,9 @@
 
 .details-container {
   padding: 0.5rem;
+  @media (max-width: 750px) {
+    padding: 0;
+  }
 }
 
 h4 {
@@ -42,4 +46,8 @@ p {
   font-size: 1.3rem;
   word-break: break-all;
   margin: 0.7rem 0 0.5rem 0;
+
+  @media (max-width: 750px) {
+    font-size: 1.1rem;
+  }
 }
