--- a/src/app/components/search-input/search-input.component.scss
+++ b/src/app/components/search-input/search-input.component.scss
@@ -5,10 +5,13 @@ $inputHeight: 4rem;
 form {
   display: flex;
   justify-content: center;
+  width: 90%;
+  margin: 0 auto;
 }
 
 input {
   width: 50%;
+  max-width: 550px;
   height: $inputHeight;
   font-size: 1.1rem;
   border: none;
@@ -20,7 +23,9 @@ input {
   -o-border-radius: 14px 0 0 14px;
 
   @media (max-width: 750px) {
-    width: 65%;
+    width: 100%;
+    font-size: 1rem;
+    padding: 0 1rem;
   }
 }
 
